# wheat-detection

./: .gitignore  .pylintrc  CHANGELOG.md  LICENSE  README.md  setup.cfg
.github/workflows/: pylint.yml
notebooks/: evaluate.ipynb  train.ipynb  visualize_dataset.ipynb
wheat/: data_module.py  dataset.py  model.py  visualization.py
wheat/config/: __init__.py  config.ini  configspec.ini
wheat/scripts/: evaluate.py  predict.py  train.py
