[metadata]
name = cmd-wheat-det
version = 0.1.0

[options]
packages = find:
package_dir =
    =.

install_requires =
    brambox
    configobj
    pandas
    pillow
    pytorch-lightning
    torch
    torchvision

python_requires = >=3.7

[options.extras_require]
test = pylint
notebook = notebook

[options.packages.find]
where = .
include = wheat*

[options.entry_points]
console_scripts =
    evaluate = wheat.scripts.evaluate:main
    predict = wheat.scripts.predict:main
    train = wheat.scripts.train:main
