[metadata]
name = cmd-wheat-det
version = 0.1.0

[options]
packages = find:
package_dir =
    =.

install_requires =
    albumentations
    brambox
    configobj
    numpy
    pandas
    pillow
    pytorch-lightning>=1.5.2,<2.0.0
    torch
    torchvision

python_requires = >=3.7

[options.extras_require]
test = pylint
notebook =
    notebook
    plotly

[options.packages.find]
where = .
include = wheat*

[options.entry_points]
console_scripts =
    evaluate = wheat.scripts.evaluate:main
    predict = wheat.scripts.predict:main
    train = wheat.scripts.train:main
