[metadata]
name = cmd-wheat-det
version = 0.1.0

[options]
packages = find:
package_dir =
    =.
include_package_data = True

install_requires =
    albumentations>=1.1.0,<2.0.0
    brambox>=3.2.0,<4.0.0
    configobj>=5.0.6,<6.0.0
    numpy
    pandas
    pillow>=8.2.0,<9.0.0
    pytorch-lightning>=1.5.2,<2.0.0
    torch>=1.9.1,<2.0.0
    torchvision>=0.10.1,<1.0.0

python_requires = >=3.7

[options.extras_require]
test = pylint
notebook =
    notebook
    plotly

[options.packages.find]
where = .
include = wheat*

[options.entry_points]
console_scripts =
    evaluate = wheat.scripts.evaluate:main
    predict = wheat.scripts.predict:main
    train = wheat.scripts.train:main

[options.package_data]
* = *.ini
